@@ -16,5 +16,6 @@ if $(FLTKLIBS)
 	MakeTest egroup : egroup.cpp : $(FLTKLIBS) ;
 	MakeTest egroup2 : egroup2.cpp : $(FLTKLIBS) ;
 	MakeTest icon_chooser : icon_chooser.cpp : $(FLTKLIBS) ;
+	MakeTest sevenseg : sevenseg.cpp : $(FLTKLIBS) ;
 #	MakeTest combobox : combobox.cpp : $(FLTKLIBS) ;
 }
