@@ -1,0 +1,31 @@
+# data file for the Fltk User Interface Designer (fluid)
+version 1.0108 
+header_name {.h} 
+code_name {.cxx}
+Function {} {open
+} {
+  Fl_Window {} {
+    label {SevenSeg sample} open selected
+    xywh {581 350 240 165} type Double visible
+  } {
+    Fl_Box {} {
+      xywh {10 10 70 92} labelsize 14
+    }
+    Fl_Counter {} {
+      label value
+      xywh {95 20 135 20} align 5 step 0.1
+    }
+    Fl_Check_Button {} {
+      label deactivate
+      xywh {95 130 135 25} down_box DOWN_BOX
+    }
+    Fl_Value_Slider {} {
+      label width
+      xywh {95 65 135 20} type Horizontal align 5 step 0.01 textsize 12
+    }
+    Fl_Button {} {
+      label color
+      xywh {205 95 25 25} align 4
+    }
+  }
+} 
