@@ -1,6 +1,7 @@
 2007-06-26  Sanel <karijes@users.sourceforge.net>
 
 	* Bumped out Item class
+	* Added SevenSeg widget with sample
 
 2007-06-25  Sanel <karijes@users.sourceforge.net>
 
